-
Bug
-
Resolution: Fixed
-
P5
-
11, 17, 18
-
b23
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8318526 | 17.0.10-oracle | Tobias Hartmann | P5 | Resolved | Fixed | b04 |
| JDK-8316760 | 17.0.10 | Victor Rudometov | P5 | Resolved | Fixed | b01 |
| JDK-8333615 | 11.0.25-oracle | Kavya K S | P5 | Resolved | Fixed | b01 |
| JDK-8335317 | 11.0.25 | Martin Doerr | P5 | Resolved | Fixed | b01 |
Microsoft Windows [Version 10.0.19041.1237]
A DESCRIPTION OF THE PROBLEM :
The value of full_count in the message of insufficient codecache is 0 even though a codecache shortage occurred.
full_count is the number of times the code heap was full.
This issue is common to all operating systems.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
javac WasteCodeCache.java
java -XX:ReservedCodeCacheSize=2496k -XX:-UseCodeCacheFlushing WasteCodeCache
EXPECTED OUTPUT :
[16.139s][warning][codecache] CodeCache is full. Compiler has been disabled.
[16.140s][warning][codecache] Try increasing the code cache size using -XX:ReservedCodeCacheSize=
OpenJDK 64-Bit Server VM warning: CodeCache is full. Compiler has been disabled.
OpenJDK 64-Bit Server VM warning: Try increasing the code cache size using -XX:ReservedCodeCacheSize=
CodeCache: size=2496Kb used=2180Kb max_used=2300Kb free=315Kb
bounds [0x0000028b91320000, 0x0000028b91590000, 0x0000028b91590000]
total_blobs=1277 nmethods=971 adapters=217
compilation: disabled (not enough contiguous free space left)
stopped_count=1, restarted_count=0
full_count=1
ACTUAL :
[16.139s][warning][codecache] CodeCache is full. Compiler has been disabled.
[16.140s][warning][codecache] Try increasing the code cache size using -XX:ReservedCodeCacheSize=
OpenJDK 64-Bit Server VM warning: CodeCache is full. Compiler has been disabled.
OpenJDK 64-Bit Server VM warning: Try increasing the code cache size using -XX:ReservedCodeCacheSize=
CodeCache: size=2496Kb used=2180Kb max_used=2300Kb free=315Kb
bounds [0x0000028b91320000, 0x0000028b91590000, 0x0000028b91590000]
total_blobs=1277 nmethods=971 adapters=217
compilation: disabled (not enough contiguous free space left)
stopped_count=1, restarted_count=0
full_count=0
- backported by
-
JDK-8316760 The value of full_count in the message of insufficient codecache is wrong
-
- Resolved
-
-
JDK-8318526 The value of full_count in the message of insufficient codecache is wrong
-
- Resolved
-
-
JDK-8333615 The value of full_count in the message of insufficient codecache is wrong
-
- Resolved
-
-
JDK-8335317 The value of full_count in the message of insufficient codecache is wrong
-
- Resolved
-
- relates to
-
JDK-8277042 add test for 8276036 to compiler/codecache
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/3702e902
-
Commit
openjdk/jdk17u-dev/d6eec8d4
-
Commit
openjdk/jdk/61cb4bc6
-
Review
openjdk/jdk11u-dev/2818
-
Review
openjdk/jdk17u-dev/1742
-
Review
openjdk/jdk/6129
-
Review
openjdk/jdk/6185